kubernetes/00-infra/scaleway-ccm.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scaleway-cloud-controller-manager
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scaleway-cloud-controller-manager
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: scaleway-cloud-controller-manager
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
    spec:
      dnsPolicy: Default
      hostNetwork: true
      serviceAccountName: cloud-controller-manager
      tolerations:
        - key: "node.cloudprovider.kubernetes.io/uninitialized"
          value: "true"
          effect: "NoSchedule"
        - key: "CriticalAddonsOnly"
          operator: "Exists"
        - key: "node-role.kubernetes.io/master"
          effect: NoSchedule
        - key: "node-role.kubernetes.io/control-plane"
          effect: NoSchedule
      containers:
        - name: scaleway-cloud-controller-manager
          image: scaleway/scaleway-cloud-controller-manager:v0.36.1
          imagePullPolicy: IfNotPresent
          args:
            - --cloud-provider=scaleway
            - --leader-elect=true
            - --allow-untagged-cloud
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
